# rust-rest-service-demo

./: .gitattributes  .gitignore  Cargo.toml
src/: main.rs
src/controller/: greetings_controller.rs  mod.rs  swagger_controller.rs
src/persistance/: greetings_repository.rs  mod.rs
src/service/: greetings_service.rs  mod.rs
